[project]
name = "snake-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "gdown>=6.0.0",
    "gython>=0.9.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pygame>=2.6.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "scipy>=1.17.1",
]
